# lora-trainer

./: .gitignore  DAVINCI_WORKFLOW.md  KOKORO_INTEGRATION.md  PRODUCTION_PIPELINE.md  README.md  REMOTION_INTEGRATION.md  install.sh  pyproject.toml  start.txt  train.py
pipeline/: CHANNEL_SYSTEM.md  CONTENT_INTELLIGENCE.md  INSTALL.md  main.py  pyproject.toml  start.sh
pipeline/audit/: CONSTITUTION.md
pipeline/channels/test_channel_a/: channel_config.json
pipeline/channels/wallet_from_eu/: channel_config.json
pipeline/competitor_intelligence/: _global_index.json
pipeline/config/: audio_sources.yaml  engagement_formulas.yaml  engines.yaml  pipeline.yaml
pipeline/config/image_engines/: huggingface_any.json  sd15_deliberate.json  sdxl_base.json  stub.json
pipeline/global_assets/: assets_index.json
pipeline/remotion/: package-lock.json  package.json  render.ts  tsconfig.json
pipeline/remotion/src/: Root.tsx  Scene.tsx  types.ts
pipeline/src/: registry.py
pipeline/src/assembly/: ffmpeg.py  jobs.py
pipeline/src/audio/: analyzer.py  audio_import.py  lipsync.py  subtitle_exporter.py  transcriber.py
pipeline/src/channel/: manager.py
pipeline/src/competitor/: manager.py
pipeline/src/davinci/: exporter.py
pipeline/src/entities/: config.py  engine_profile.py  layout.py  project.py  prompts.py  scenario.py  scene_v2.py  state.py  timeline.py
pipeline/src/images/: assets.py  batch.py  character_jobs.py  compositor.py  engine.py  engine_profiles.py  layout_store.py  prompts.py  render_jobs.py
pipeline/tests/: test_registry.py  test_step2_voiceover.py  test_step4_compositor.py
(+95 files in other folders)
