[project]
name = "lora-trainer"
version = "0.1.0"
description = "Simple AMD/ROCm Linux CLI wrapper for kohya-ss sd-scripts LoRA training"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
lora-trainer = "train:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["train.py", "config/default.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
