[project]
name = "vidpipe"
version = "0.1.0"
description = "Video production pipeline — Claude.ai web orchestrates via MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "faster-whisper>=1.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
compositing = [
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
    "lxml>=5.0.0",
]
tracing = [
    "vtracer>=0.6.0",
]
generation = [
    "diffusers>=0.27.0",
    "accelerate>=0.28.0",
    "transformers>=4.39.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
